--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.6.5",
     "cors": "^2.8.5",
     "mongoose": "^8.0.3",
+    "next": "^15.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
